# gemini-calendar-bridge

./: .gitignore  README.md  calendar_client.py  config.py  gemini_parser.py  lambda_function.py  local_test.py  logger.py  main.py  outlook_client.py  pyproject.toml  requirements.txt
.github/workflows/: claude.yml  deploy.yml
